--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="./default.css" />
 </head>
 <body>
-  <div class="container">    
+  <div class="container">
+    <div id="page_number"></div>
     <h1 id="vocabulary"></h1>
     <div id="choices"></div>
   </div>
