--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 </head>
 <body>
   <div class="container">
-    <div id="page_number"></div>
-    <h1 id="vocabulary"></h1>
-    <div id="choices"></div>
+    <div id="quiz">
+      <div id="page_number"></div>
+      <h1 id="vocabulary"></h1>
+      <div id="choices"></div>
+    </div>
+    <div id="results"></div>
   </div>
   <script type="text/javascript" src="./default.js"></script>
 </body>
