add day selection

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
   <div class="container">
+    <div id="days" class="active">
+      <h2>Choose Day</h2>
+      <div id="days_option"></div>
+    </div>
     <div id="quiz">
       <div id="page_number"></div>
-      <h1 id="vocabulary"></h1>
+      <h2 id="vocabulary"></h2>
       <div id="choices"></div>
     </div>
     <div id="results"></div>
